crates/ruff_linter/src/rules/flake8_debugger/snapshots/ruff_linter__rules__flake8_debugger__tests__T100_T100.py.snap
---
source: crates/ruff_linter/src/rules/flake8_debugger/mod.rs
---
T100 Trace found: `breakpoint` used
 --> T100.py:1:1
  |
1 | breakpoint()
  | ^^^^^^^^^^^^
  |

T100 Import for `pdb` found
 --> T100.py:3:1
  |
3 | import pdb
  | ^^^^^^^^^^
  |

T100 Import for `builtins.breakpoint` found
 --> T100.py:5:1
  |
5 | from builtins import breakpoint
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

T100 Import for `pdb.set_trace` found
 --> T100.py:6:1
  |
6 | from pdb import set_trace as st
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

T100 Import for `celery.contrib.rdb.set_trace` found
 --> T100.py:7:1
  |
7 | from celery.contrib.rdb import set_trace
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

T100 Import for `celery.contrib.rdb` found
 --> T100.py:9:1
  |
9 | import celery.contrib.rdb
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  |

T100 Import for `debugpy.wait_for_client` found
  --> T100.py:10:1
   |
10 | from debugpy import wait_for_client
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

T100 Import for `debugpy` found
  --> T100.py:11:1
   |
11 | import debugpy
   | ^^^^^^^^^^^^^^
   |

T100 Import for `ptvsd.break_into_debugger` found
  --> T100.py:12:1
   |
12 | from ptvsd import break_into_debugger
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

T100 Import for `ptvsd.wait_for_attach` found
  --> T100.py:14:1
   |
14 | from ptvsd import wait_for_attach
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

T100 Import for `ptvsd` found
  --> T100.py:15:1
   |
15 | import ptvsd
   | ^^^^^^^^^^^^
   |

T100 Trace found: `builtins.breakpoint` used
  --> T100.py:17:1
   |
17 | breakpoint()
   | ^^^^^^^^^^^^
   |

T100 Trace found: `pdb.set_trace` used
  --> T100.py:18:1
   |
18 | st()
   | ^^^^
   |

T100 Trace found: `celery.contrib.rdb.set_trace` used
  --> T100.py:19:1
   |
19 | set_trace()
   | ^^^^^^^^^^^
   |

T100 Trace found: `debugpy.breakpoint` used
  --> T100.py:20:1
   |
20 | debugpy.breakpoint()
   | ^^^^^^^^^^^^^^^^^^^^
   |

T100 Trace found: `debugpy.wait_for_client` used
  --> T100.py:21:1
   |
21 | wait_for_client()
   | ^^^^^^^^^^^^^^^^^
   |

T100 Trace found: `debugpy.listen` used
  --> T100.py:22:1
   |
22 | debugpy.listen(1234)
   | ^^^^^^^^^^^^^^^^^^^^
   |

T100 Trace found: `ptvsd.break_into_debugger` used
  --> T100.py:24:1
   |
24 | break_into_debugger()
   | ^^^^^^^^^^^^^^^^^^^^^
   |

T100 Trace found: `ptvsd.wait_for_attach` used
  --> T100.py:25:1
   |
25 | wait_for_attach()
   | ^^^^^^^^^^^^^^^^^
   |

T100 Import for `sys.breakpointhook` found
  --> T100.py:33:5
   |
33 |     from sys import breakpointhook # error
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

T100 Trace found: `sys.breakpointhook` used
  --> T100.py:35:5
   |
35 |     breakpointhook() # error
   |     ^^^^^^^^^^^^^^^^
   |

T100 Import for `sys.__breakpointhook__` found
  --> T100.py:38:5
   |
38 |     from sys import __breakpointhook__ # error
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

T100 Trace found: `sys.__breakpointhook__` used
  --> T100.py:40:5
   |
40 |     __breakpointhook__() # error
   |     ^^^^^^^^^^^^^^^^^^^^
   |

T100 Trace found: `sys.breakpointhook` used
  --> T100.py:42:1
   |
42 | sys.breakpointhook() # error
   | ^^^^^^^^^^^^^^^^^^^^
   |

T100 Trace found: `sys.__breakpointhook__` used
  --> T100.py:43:1
   |
43 | sys.__breakpointhook__() # error
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
